[package]
name = "sktsh"
version = "0.0.0"
authors = ["oblique <psyberbits@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1"
thiserror = "1"
structopt = "0.3"
libc = "0.2.67"
smol = "0.1.4"
futures = "0.3"
async-dup = "1"
serde = { version = "1.0.110", features = ["derive"] }
bincode = "1.2.1"
byteorder = "1.3.4"
signal-hook = "0.1.15"
