[package]
name = "sktsh"
version = "0.0.0"
authors = ["oblique <psyberbits@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.31"
thiserror = "1.0.20"
structopt = "0.3.15"
libc = "0.2.71"
smol = "0.1.14"
futures = "0.3.5"
serde = { version = "1.0.112", features = ["derive"] }
bincode = "1.2.1"
byteorder = "1.3.4"
signal-hook = "0.1.16"
