[package]
name = "sktsh"
version = "0.0.0"
authors = ["oblique <psyberbits@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.51"
thiserror = "1.0.30"
structopt = "0.3.25"
libc = "0.2.112"
tokio = { version = "1.15.0", features = ["full"] }
bytes = "1.1.0"
serde = { version = "1.0.132", features = ["derive"] }
bincode = "1.3.3"
